# dattobd

./: .drone.yml  .gitignore  .gitlab-ci.yml  BUILDING-PACKAGE.md  COPYING  INSTALL.md  LICENSING.md  Makefile  README.md  tags  test.sh
.ci/: build_dattobd.gitlab-ci.yml  create_vm.gitlab-ci.yml
.obs/: workflows.yml
app/: Makefile  aioctl.c  dbdctl.c  elioctl.c
doc/: STRUCTURE.md  aioctl.8  aioctl.8.html  aioctl.8.md  dbdctl.8  dbdctl.8.html  dbdctl.8.md  elioctl.8  elioctl.8.html  elioctl.8.md  update-img.8  update-img.8.html  update-img.8.md
include/: dattobd.h  libdattobd.h
lib/: .gitignore  CMakeLists.txt  Makefile  Makefile.in  libassurio-snap.c  libassurio-snap.h  libdattobd.c  libdattobd.h  libelastio-snap.c  libelastio-snap.h
lib/tests/: Makefile  testveradi.c
repobuild/: collect_artifacts.sh  upload.sh
src/: .gitignore  Makefile  assurio-snap.c  assurio-snap.h  bdev_state_handler.c  bdev_state_handler.h  bio_helper.c  bio_helper.h  bio_list.c  bio_list.h  bio_queue.c  bio_queue.h  bio_request_callback.h  blkdev.c  blkdev.h  callback_refs.c  callback_refs.h  config.h  cow_manager.c  cow_manager.h  dattobd.c  dattobd.h  dattobd.mod  driver.c  elastio-snap.c  elastio-snap.h  fileops.c  fileops.h  filesystem.c  filesystem.h  ftrace_hooking.c  ftrace_hooking.h  genconfig.sh  hints.h  includes.h  ioctl_handlers.c  ioctl_handlers.h  logging.h  main.c  memory.c  (+40 more)
tests/: aiotest.sh  assurio-snap.py  dattobd.py  dbdtest.sh  devicetestcase.py  devicetestcase_multipart.py  elastio-snap.py  elastio_snap.py  elio-test.sh  kmod.py  parse.py  test_destroy.py  (+8 more)
(+203 files in other folders)
